--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.21.1",
     "axios-cookiejar-support": "^1.0.1",
     "bcrypt": "^5.0.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "formik": "^2.2.6",
@@ -19,6 +20,7 @@
     "mysql": "^2.18.1",
     "mysql-query-placeholders": "^0.2.2",
     "mysql2": "^2.2.5",
+    "socket.io": "^3.1.0",
     "tough-cookie": "^4.0.0"
   },
   "devDependencies": {
