--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "axios-cookiejar-support": "^1.0.1",
     "bcrypt": "^5.0.0",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "formik": "^2.2.6",
     "ini": "^2.0.0",
+    "jsonwebtoken": "^8.5.1",
     "mysql": "^2.18.1",
     "mysql-query-placeholders": "^0.2.2",
     "mysql2": "^2.2.5",
